--- a/src/app/admin/product/product.component.html
+++ b/src/app/admin/product/product.component.html
@@ -37,7 +37,7 @@
               <td class="data" mat-cell *matCellDef="let row">{{row.weight_name}}</td>
             </ng-container>
             <ng-container matColumnDef="product_page">
-              <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Product page</th>
+              <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Page</th>
               <td class="data" mat-cell *matCellDef="let row">{{row.product_page}}</td>
             </ng-container>
             <ng-container matColumnDef="product_produ_cost">
