--- a/src/app/admin/add-edit-party/add-edit-party.component.css
+++ b/src/app/admin/add-edit-party/add-edit-party.component.css
@@ -1,14 +1,14 @@
 .column {
   margin-right: 1px;
   width: 205px;
-  height: 200px;
+  height: 190px;
   float: left;
 
 }
 
 .column_1 mat-form-field {
   width: 99.1%;
-  margin-top: 5px;
+  margin-top: 22px;
 }
 
 textarea {
@@ -26,26 +26,25 @@ textarea {
   color: rgb(20, 89, 92);
   margin-bottom: 20px;
 }
-
-.reset_btn {
-  width: 80px;
-  height: 40px;
-  margin-right: 20px;
+#main_button{
+  width: 190px;
+  margin: auto;
 
 }
+.reset_btn {
+  float: left;
+  width: 80px;
+  height: 40px;
 
-/* button {
-  top: 20px;
-} */
+}
 
 .add_btn {
   width: 80px;
   height: 40px;
-  color: whitesmoke;
+  float: right;
   background-color: green;
-  margin-right: 222px;
-
-}
+  color: white;
+} 
 
 mat-toolbar {
   height: 40px;
@@ -61,64 +60,33 @@ mat-icon {
 
   @media (min-width:1200px) and (max-width:2000px) {
   .column_1 mat-form-field {
-    width: 99%;
-  }
-
-  .reset_btn {
-    width: 80px;
-    height: 40px;
-    margin-right: 20px;
-
-  }
-
-  .add_btn {
-    width: 80px;
-    height: 40px;
-    color: whitesmoke;
-    margin-right: 222px;
-
+    width: 99.1%;
   }
 }   
 
 @media (min-width:768px) and (max-width:1200px) {
-  .column {
-    width: 100%;
-    height: auto;
-    display: flex;
-  }
+.column{
+  width: 33.1%;
+  height: auto;
+}
+.column mat-form-field{
+  width: 98%;
+  margin-left: 4px;
+}
 
-  .column mat-form-field {
-    width: 30.5%;
-    margin-left: 2%;
-  }
+.column_1 mat-form-field{
+  width: 100%;
+  margin-top: -1px;
+}
 
-  .column_1 {
-    width: 96%;
-    margin-left: 2%;
-  }
+form{
+  width: 562px;
+}
 
-  .column_1 mat-form-field {
-    width: 100%;
-    margin-top: 2px;
-  }
-
-  .main_button{
-    width: 190px;
-    margin: auto;
-  }
-   .reset_btn {
-    float: left;
-    margin: 0px;
-  }
-
-  .add_btn {
-    float: right;
-    margin: 0px;
-  } 
 }
 
 
-@media (max-width:768px) {
+@media (max-width:767px) {
   .column {
     width: 100%;
     height: auto;
@@ -136,19 +104,4 @@ mat-icon {
   .column_1 mat-form-field {
     width: 100%;
   }
-
-  .main_button{
-    width: 190px;
-    margin: auto;
-  }
-   .reset_btn {
-    float: left;
-    margin: 0px;
-  }
-
-  .add_btn {
-    float: right;
-    margin: 0px;
-  } 
-
 }
