--- a/src/app/admin/add-edit-production/add-edit-production.component.html
+++ b/src/app/admin/add-edit-production/add-edit-production.component.html
@@ -4,12 +4,12 @@
 </mat-toolbar>
 <span>Select Employee</span>
 <div mat-dialog-content>
-    <form [formGroup]="MaterialForm">
+    <form [formGroup]="ProductionForm">
         <div class="column">
-            <input type="number" formControlName="mh_id" readonly hidden>
+            <input type="number" formControlName="production_id" readonly hidden>
             <mat-form-field appearance="fill">
                 <mat-label>Employee</mat-label>
-                <mat-select formControlName="mh_emp_id_fk">
+                <mat-select formControlName="emp_id_fk" (valueChange)="getEmpdata($event)">
                     <mat-option *ngFor="let empdata of empdata"
                         [value]="empdata.emp_id">{{empdata.emp_name}}</mat-option>
                 </mat-select>
@@ -20,27 +20,28 @@
             </mat-form-field>
             <mat-form-field appearance="fill">
                 <mat-label>Email ID</mat-label>
-                <input type="email" formControlName="emp_mobile" matInput placeholder="Mobile">
+                <input type="email" formControlName="emp_email" matInput placeholder="Email">
             </mat-form-field>
             <mat-form-field appearance="fill">
                 <mat-label>Address</mat-label>
-                <input type="text" formControlName="emp_mobile" matInput placeholder="Mobile">
+                <input type="text" formControlName="emp_address" matInput placeholder="Address">
             </mat-form-field> <br>
             <span>Add Item</span><br>
             <mat-form-field appearance="fill">
                 <mat-label>Category</mat-label>
-                <mat-select formControlName="cat_id_fk">
+                <mat-select formControlName="cat_id_fk" (valueChange)="getCatdata($event)">
                     <mat-option *ngFor="let catdata of catdata"
                         [value]="catdata.cat_id">{{catdata.cat_name}}</mat-option>
                 </mat-select>
-            </mat-form-field>
+            </mat-form-field>        
+
             <mat-form-field appearance="fill">
                 <mat-label>Product</mat-label>
-                <mat-select formControlName="mh_item_id_fk">
-                    <mat-option *ngFor="let itemdata of itemdata"
-                        [value]="itemdata.item_id">{{itemdata.item_name}}</mat-option>
+                <mat-select formControlName="product_id_fk">
+                    <mat-option *ngFor="let productdata of product_single_data" [value]="productdata.product_id">{{productdata.product_name}}</mat-option>
                 </mat-select>
             </mat-form-field>
+
             <mat-form-field appearance="fill">
                 <mat-label>Quantity</mat-label>
                 <input formControlName="mh_quantity" matInput placeholder="Quantity">
