--- a/src/app/admin/add-edit-purchase/add-edit-purchase.component.html
+++ b/src/app/admin/add-edit-purchase/add-edit-purchase.component.html
@@ -3,7 +3,7 @@
 </div>
 
 <nav ngbNav #nav="ngbNav" style="border-bottom: 1px solid gray; height: 47px;">
-	<!-- ////////////////////////////////////////// for Party table data start ////////////////////////////////// -->
+	<!-- ////////////////////////////////////////// for Party Form data start ////////////////////////////////// -->
 	<ng-container ngbNavItem>
 		<a ngbNavLink class="puechase_link" (click)="party()">Party</a>
 		<ng-template ngbNavContent>
@@ -12,7 +12,7 @@
 					<div class="column">
 						<mat-form-field appearance="fill">
 							<mat-label>Party Id</mat-label>
-							<input formControlName="party_id" matInput placeholder="Party Id" readonly="party_id">
+							<input formControlName="party_id" matInput placeholder="Party Id" readonly>
 						</mat-form-field>
 
 						<mat-form-field appearance="fill">
@@ -25,18 +25,19 @@
 
 						<mat-form-field appearance="fill">
 							<mat-label>Party Mobile</mat-label>
-							<input type="number" formControlName="party_mobile" matInput placeholder="Mobile No">
+							<input type="number" formControlName="party_mobile" matInput placeholder="Mobile No"
+								readonly>
 						</mat-form-field>
 
 						<mat-form-field appearance="fill">
 							<mat-label>Party Email</mat-label>
-							<input type="email" formControlName="party_email" matInput placeholder="Email">
+							<input type="email" formControlName="party_email" matInput placeholder="Email" readonly>
 						</mat-form-field>
 						<br>
 						<mat-form-field appearance="fill" class="textarea_box">
 							<mat-label>Address</mat-label>
-							<textarea type="text" formControlName="party_address" matInput
-								placeholder="Address"></textarea>
+							<textarea type="text" formControlName="party_address" matInput placeholder="Address"
+								readonly></textarea>
 						</mat-form-field>
 					</div>
 				</form>
@@ -48,24 +49,26 @@
 			</div>
 		</ng-template>
 	</ng-container>
-	<!-- /////////////////////////////////////////// for Party table data end /////////////////////////////////////// -->
+	<!-- /////////////////////////////////////////// for Party End data end /////////////////////////////////////// -->
 
-	<!-- /////////////////////////////////////////// for item table data start ////////////////////////////////////// -->
+	<!-- /////////////////////////////////////////// for item Form data start ////////////////////////////////////// -->
 	<ng-container ngbNavItem>
 		<a ngbNavLink class="puechase_link" (click)="items()">Item</a>
 		<ng-template ngbNavContent>
 			<div class="content_area">
 				<form [formGroup]="item_form">
 					<div class="column">
+
+						<input formControlName="pur_id_fk" ngModel={{pur_id_fk}} hidden>
+
 						<mat-form-field appearance="fill">
 							<mat-label>Party Name</mat-label>
-							<input formControlName="party_id_fk" matInput placeholder="Party">
+							<input formControlName="party_id_fk" matInput placeholder="Party Name">
 						</mat-form-field>
-
 
 						<mat-form-field appearance="fill">
 							<mat-label>Category</mat-label>
-							<mat-select formControlName="cat_id_fk" (valueChange)="get_single_cat($event)">
+							<mat-select formControlName="cat_id_fk" (valueChange)="cat_data_single($event)">
 								<mat-option *ngFor="let cat of cat_data"
 									[value]="cat.cat_id">{{cat.cat_name}}</mat-option>
 							</mat-select>
@@ -73,127 +76,100 @@
 
 						<mat-form-field appearance="fill">
 							<mat-label>Item</mat-label>
-							<mat-select formControlName="purch_item_des_pur_id_fk"
-								(valueChange)="item_single_data($event)">
+							<mat-select formControlName="item_id_fk" (valueChange)="item_single_data($event)">
 								<mat-option *ngFor="let item of single_item_data"
 									[value]="item.item_id">{{item.item_name}}</mat-option>
 							</mat-select>
 						</mat-form-field>
 
+						<mat-form-field appearance="fill">
+							<mat-label>Size</mat-label>
+							<input formControlName="item_size" matInput placeholder="Size" readonly>
+						</mat-form-field>
+						<br>
+
+						<mat-form-field appearance="fill">
+							<mat-label>Weight</mat-label>
+							<input formControlName="item_weight" matInput placeholder="Weight" readonly>
+						</mat-form-field>
 
 						<mat-form-field appearance="fill">
 							<mat-label>Unit</mat-label>
-							<input formControlName="item_unit" matInput placeholder="Unit">
+							<input formControlName="item_unit" matInput placeholder="Unit" readonly>
 						</mat-form-field>
 
 						<mat-form-field appearance="fill">
 							<mat-label>Rate</mat-label>
-							<input formControlName="pur_item_des_rate" matInput placeholder="Rate">
-						</mat-form-field><br>
+							<input formControlName="item_rate" matInput placeholder="Rate" (keyup)="total_rate_cal()">
+						</mat-form-field>
 
 						<mat-form-field appearance="fill">
 							<mat-label>Quantity</mat-label>
-							<input formControlName="pur_item_des_quantity" matInput placeholder="Quantity">
+							<input formControlName="item_quantity" matInput placeholder="Quantity"
+								(keyup)="total_rate_cal()">
 						</mat-form-field>
-
-						<mat-form-field appearance="fill">
-							<mat-label>Discount</mat-label>
-							<input formControlName="discount" matInput placeholder="Discount">
+						<br>
+						<mat-form-field appearance="fill" class="item_amount">
+							<mat-label>Total Amount</mat-label>
+							<input formControlName="item_amount" matInput placeholder="Amount">
 						</mat-form-field>
-
-						<mat-form-field appearance="fill">
-							<mat-label>GST</mat-label>
-							<input formControlName="gst" matInput placeholder="gst">
-						</mat-form-field>
-
-						<mat-form-field appearance="fill">
-							<mat-label>Net Rate</mat-label>
-							<input formControlName="net_rate" matInput placeholder="Net Rate">
-						</mat-form-field>
-
-						<mat-form-field appearance="fill">
-							<mat-label>Amount</mat-label>
-							<input formControlName="pur_item_des_amount" matInput placeholder="Amount">
-						</mat-form-field><br>
 
 						<input formControlName="admin_id_fk" ngModel={{admin_id}} readonly hidden type="number">
 
-						<!-- <mat-form-field appearance="fill" class="text_amount">
-							<mat-label>Amount</mat-label>
-							<input formControlName="amount" matInput placeholder="Amount">
-						</mat-form-field><br> -->
-
-						<mat-icon class="addButton" (click)="des_next()">add</mat-icon>
+						<mat-icon class="addButton" (click)="onAdd()">add</mat-icon>
 					</div>
 				</form>
 
 				<!-- ////////////////////////////////// for Party description /////////////////// -->
 
 				<div class="cotainer">
+					<div class="count_search">
+						<span class="notice_text"> Total :{{dec_count}}</span>
+						<div class="search">
+							<input matInput (keyup)="applyFilter($event)" placeholder="Search" #input>
+						</div>
+					</div>
 					<form>
 						<div class="mat-elevation-z8">
 							<table mat-table [dataSource]="dataSource" matSort id="table">
 								<ng-container matColumnDef="slno">
-									<th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>SL NO.</th>
+									<th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>S.N.</th>
 									<td class="data" mat-cell *matCellDef="let row; let i = index;">
 										{{(paginatorRef.pageIndex * paginatorRef.pageSize)+(i+1)}}</td>
 								</ng-container>
 
-								<ng-container matColumnDef="purch_item_des_item_id_fk">
+								<ng-container matColumnDef="cat_id_fk">
 									<th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Category</th>
-									<td class="data" mat-cell *matCellDef="let row">{{row.purch_item_des_item_id_fk}}
+									<td class="data" mat-cell *matCellDef="let row">{{row.cat_id_fk}}
 									</td>
 								</ng-container>
 
 
-								<ng-container matColumnDef="purch_item_des_pur_id_fk">
+								<ng-container matColumnDef="item_id_fk">
 									<th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Item</th>
-									<td class="data" mat-cell *matCellDef="let row">{{row.purch_item_des_pur_id_fk}}
+									<td class="data" mat-cell *matCellDef="let row">{{row.item_id_fk}}
 									</td>
 								</ng-container>
 
-								<ng-container matColumnDef="party_name">
-									<th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Party</th>
-									<td class="data" mat-cell *matCellDef="let row">{{row.party_name}}</td>
-								</ng-container>
-
-								<ng-container matColumnDef="item_unit">
-									<th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Unit</th>
-									<td class="data" mat-cell *matCellDef="let row">{{row.item_unit}}</td>
-								</ng-container>
-
-								<ng-container matColumnDef="gst">
-									<th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>GST</th>
-									<td class="data" mat-cell *matCellDef="let row">{{row.gst}}</td>
-								</ng-container>
-
-								<ng-container matColumnDef="pur_item_des_rate">
+								<ng-container matColumnDef="item_rate">
 									<th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Rate</th>
-									<td class="data" mat-cell *matCellDef="let row">{{row.pur_item_des_rate}}</td>
+									<td class="data" mat-cell *matCellDef="let row">{{row.item_rate}}</td>
 								</ng-container>
 
-								<ng-container matColumnDef="pur_item_des_quantity">
+								<ng-container matColumnDef="item_quantity">
 									<th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Quantity</th>
-									<td class="data" mat-cell *matCellDef="let row">{{row.pur_item_des_quantity}}</td>
+									<td class="data" mat-cell *matCellDef="let row">{{row.item_quantity}}</td>
 								</ng-container>
 
-								<ng-container matColumnDef="net_rate">
-									<th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Net Rat</th>
-									<td class="data" mat-cell *matCellDef="let row">{{row.net_rate}}</td>
-								</ng-container>
-
-								<ng-container matColumnDef="discount">
-									<th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Discount</th>
-									<td class="data" mat-cell *matCellDef="let row">{{row.discount}}</td>
-								</ng-container>
-								<ng-container matColumnDef="pur_item_des_amount">
+								<ng-container matColumnDef="item_amount">
 									<th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Amount</th>
-									<td class="data" mat-cell *matCellDef="let row">{{row.pur_item_des_amount}}</td>
+									<td class="data" mat-cell *matCellDef="let row">{{row.item_amount}}</td>
 								</ng-container>
 
 								<ng-container matColumnDef="Action">
 									<th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Action</th>
-									<td class="data" mat-cell *matCellDef="let row"> <mat-icon>delete</mat-icon></td>
+									<td class="data" mat-cell *matCellDef="let row"> <mat-icon
+											(click)="delItem(row)">delete</mat-icon></td>
 								</ng-container>
 
 								<tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
@@ -213,7 +189,7 @@
 	</ng-container>
 	<!-- ///////////////////////////////////////// for item table data end ///////////////////////////////////////// -->
 
-	<!-- /////////////////////////////////////// for final bill  table data start ////////////////////////////////// -->
+	<!-- /////////////////////////////////////// for final bill Form data start ////////////////////////////////// -->
 
 	<ng-container ngbNavItem><br>
 		<a ngbNavLink class="puechase_link" (click)="final_bill()">Final bill</a>
@@ -224,67 +200,63 @@
 					<div class="column">
 
 						<mat-form-field appearance="fill">
-							<mat-label>Party by:</mat-label>
-							<input formControlName="item_sale_by" matInput placeholder="Party by">
+							<mat-label>Total Amount</mat-label>
+							<input formControlName="purch_amount" matInput placeholder="Total Amount">
 						</mat-form-field>
 
 						<mat-form-field appearance="fill">
-							<mat-label>Basic Amount</mat-label>
-							<input formControlName="item_basic_amount" matInput placeholder="Basic Amount">
+							<mat-label>Discount</mat-label>
+							<input formControlName="purch_discount" matInput placeholder="Discount">
 						</mat-form-field>
 
 						<mat-form-field appearance="fill">
 							<mat-label>GST</mat-label>
-							<input formControlName="item_gst" matInput placeholder="GST">
+							<input formControlName="purch_gst" matInput placeholder="GST">
 						</mat-form-field>
 
-
+						<br>
 						<mat-form-field appearance="fill">
-							<mat-label>Discount</mat-label>
-							<input formControlName="item_discount" matInput placeholder="item_discount">
-						</mat-form-field>
-
-						<mat-form-field appearance="fill">
-							<mat-label>Net Amount</mat-label>
-							<input formControlName="item_amount" matInput placeholder="Net Amount">
-						</mat-form-field><br>
-
-						<mat-form-field appearance="fill">
-							<mat-label>Backdues</mat-label>
-							<input formControlName="item_backdues" matInput placeholder="Backdues">
-						</mat-form-field>
-
-						<mat-form-field appearance="fill">
-							<mat-label>R/O</mat-label>
-							<input formControlName="item_ro" matInput placeholder="RO">
-						</mat-form-field>
-
-						<mat-form-field appearance="fill">
-							<mat-label>Total Amount</mat-label>
-							<input formControlName="item_total_amount" matInput placeholder="total amount">
+							<mat-label>Gross Amount</mat-label>
+							<input formControlName="purch_gross_amount" matInput placeholder="Gross Amount">
 						</mat-form-field>
 
 						<mat-form-field appearance="fill">
 							<mat-label>Paid</mat-label>
-							<input formControlName="item_paid_amount" matInput placeholder="Paid">
+							<input formControlName="purch_paid" matInput placeholder="Paid">
 						</mat-form-field>
 
 						<mat-form-field appearance="fill">
 							<mat-label>Dues</mat-label>
-							<input formControlName="item_dues" matInput placeholder="Dues">
+							<input formControlName="purch_dues" matInput placeholder="Dues">
 						</mat-form-field>
 						<br>
-						<mat-form-field appearance="fill">
-							<mat-label>Upload Bill</mat-label>
-							<input formControlName="bill_img" matInput>
+						<mat-form-field appearance="fill" class="bill_no">
+							<mat-label>Bill Number</mat-label>
+							<input formControlName="purch_bill_no" matInput placeholder="Bill Number">
 						</mat-form-field>
+
+						<mat-form-field appearance="fill" class="bill_no">
+							<mat-label>Bill Upload</mat-label>
+							<input formControlName="purch_bill_img" matInput placeholder="Bill Upload">
+						</mat-form-field>
+
+						<!-- <label class="bill_file">
+							<p class="upload_text">Upload Bill</p><br>
+							<input class="img_bill" type="file" formControlName="purch_bill_img" (change)="onPhotoUpload($event)">
+						</label> -->
 
 						<mat-form-field appearance="fill" class="date_box">
 							<mat-label>Date</mat-label>
-							<input formControlName="final_bill_date" matInput [matDatepicker]="picker">
+							<input formControlName="purch_date" matInput [matDatepicker]="picker">
 							<mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
 							<mat-datepicker #picker></mat-datepicker>
-						</mat-form-field>
+						</mat-form-field><br>
+
+						<input formControlName="purch_id">
+
+						<input formControlName="admin_id_fk" ngModel={{admin_id}} readonly hidden type="number">
+
+
 					</div>
 					<!-- ---------------------------------------------Change--------------------------------------- -->
 
@@ -298,7 +270,7 @@
 			</div>
 		</ng-template>
 	</ng-container>
-	<!-- ////////////////////////////////////////// for final bill  table data end ///////////////////////////// -->
+	<!-- ////////////////////////////////////////// for final bill form data end ///////////////////////////// -->
 
 </nav>
 <div [ngbNavOutlet]="nav" class="mt-2"></div>
