master data responsive all

--- a/src/app/admin/add-edit-material-handover/add-edit-material-handover.component.html
+++ b/src/app/admin/add-edit-material-handover/add-edit-material-handover.component.html
@@ -15,7 +15,9 @@
             </mat-form-field>
             <mat-form-field appearance="fill">
                 <mat-label>Mobile Number</mat-label>
-                <input  type="number" formControlName="emp_mobile" matInput placeholder="Mobile" onkeypress=" return this.value.length < 10" oninput="if(this.value.length>=10) {this.value=this.value.slice(0,10);}">
+                <input  type="number" formControlName="emp_mobile" matInput placeholder="Mobile" type="number"
+                onkeypress=" return this.value.length < 10" oninput="if(this.value.length>=10) 
+                {this.value=this.value.slice(0,10);}">
             </mat-form-field>          
             <mat-form-field appearance="fill">
               <mat-label>Email ID</mat-label>
