--- a/src/app/admin/dues/dues.component.html
+++ b/src/app/admin/dues/dues.component.html
@@ -19,7 +19,7 @@
           </ng-container>
 
           <ng-container matColumnDef="customer_name">
-            <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Customer Name</th>
+            <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Customer</th>
             <td class="data" mat-cell *matCellDef="let row">{{row.customer_name}}</td>
           </ng-container>
 
