--- a/src/app/admin/gst/gst.component.css
+++ b/src/app/admin/gst/gst.component.css
@@ -1,8 +1,9 @@
-#wrapper{
+#wrapper {
     margin-top: 63px;
 
 }
-.view_notice{
+
+.view_notice {
     height: 40px;
     width: 100%;
     background-color: #0b4648;
@@ -12,18 +13,21 @@
     padding: 10px;
     box-sizing: border-box;
 }
-#add_gst{
+
+#add_gst {
     position: relative;
     top: -5px;
     left: 2px;
     cursor: pointer;
 }
-.notice_text{
+
+.notice_text {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-style: italic;
     font-size: 16px;
 }
-.count_search{
+
+.count_search {
     height: 40px;
     width: 100%;
     display: flex;
@@ -32,10 +36,12 @@
     box-sizing: border-box;
     color: #0d5e58;
 }
-.count_search .notice_text{
+
+.count_search .notice_text {
     font-size: 16px;
 }
-.search input{   
+
+.search input {
     border-bottom: 1px solid #0a4547;
     outline: none;
     padding: 7px 2px 6px 7px;
@@ -45,57 +51,96 @@
     left: 0px;
 }
 
-mat-icon{
+mat-icon {
     background-color: transparent;
     border: none;
     font-size: 20px;
     line-height: 30px;
 }
 
-#table{
+#table {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     border-collapse: collapse;
     width: 100%;
-  }
-  .trth{
-      color: white;
-      background-color:  #0f575a;
-      height: 40px;
-      font-size: 16px;
-      font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;  }
-  tr:nth-child(even){
-      background-color: whitesmoke;
-      height: 35px;
-  }
-  tr:nth-child(odd){   
-      height: 35px;
-  }
-  tr:hover{
-    background-color:  #0f575a;
-      color: aliceblue;
-      cursor: pointer;
-  }
-  .mat-row:hover > .mat-cell {
-    color:  white
-  }
-  ng-container{
-      text-align: center;
-  }
-  
-  .mat-form-field {
-      font-size: 18px;
-      width: 100%;
-  }
+}
 
-  /* //////////////////////////table media q//////////////////////////// */
+.trth {
+    color: white;
+    background-color: #0f575a;
+    height: 40px;
+    font-size: 16px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+tr:nth-child(even) {
+    background-color: whitesmoke;
+    height: 35px;
+}
+
+tr:nth-child(odd) {
+    height: 35px;
+}
+
+tr:hover {
+    background-color: #0f575a;
+    color: aliceblue;
+    cursor: pointer;
+}
+
+.mat-row:hover>.mat-cell {
+    color: white
+}
+
+ng-container {
+    text-align: center;
+}
+
+.mat-form-field {
+    font-size: 18px;
+    width: 100%;
+}
+
+/* //////////////////////////table media q//////////////////////////// */
+@media(min-width:461px) and (max-width:1180px) {
+    .notice_text {
+        font-size: 14px;
+    }
+
+    .count_search .notice_text {
+        font-size: 14px;
+    }
+
+    table th {
+        font-size: 14px;
+    }
+
+    table td {
+        font-size: 14px;
+    }
+
+}
 
 @media (max-width:460px) {
+    #wrapper {
+        overflow-x: hidden;
+    }
+
+    .cotainer {
+        overflow-x: auto;
+    }
+
+    mat-paginator {
+        position: fixed;
+    }
+
     .notice_text {
         font-size: 13px;
     }
-    .count_search .notice_text{
+
+    .count_search .notice_text {
         font-size: 13px;
     }
+
     table th {
         font-size: 13px;
     }
@@ -121,11 +166,5 @@ mat-icon{
         padding-right: 0px;
         padding-left: 10px;
     }
-    
+
 }
- 
-  
-    
-  
-  
-  
