--- a/src/app/admin/add-edit-account/add-edit-account.component.html
+++ b/src/app/admin/add-edit-account/add-edit-account.component.html
@@ -7,33 +7,28 @@
         <div class="column">
             <mat-form-field appearance="fill">
                 <mat-label>Cash in Hand</mat-label>
-                <input formcontrolName="cash_in_hand" matInput placeholder="Cash in hand ">
+                <input formcontrolName="cash_in_hand" matInput placeholder="Cash in hand " type="number">
             </mat-form-field><br>
 
             <mat-form-field appearance="fill">
                 <mat-label>Today Sale</mat-label>
-                <input formcontrolName="today_sale" matInput placeholder="Today sale">
+                <input formcontrolName="today_sale" matInput placeholder="Today sale" type="number">
             </mat-form-field><br>
 
             <mat-form-field appearance="fill">
                 <mat-label>Expense</mat-label>
-                <input formControlName="expense" matInput placeholder="Expense">
+                <input formControlName="expense" matInput placeholder="Expense" type="number">
             </mat-form-field><br>
-
-            <!-- <mat-form-field appearance="fill" id="remark" id="descr">
-                <mat-label>Description</mat-label>
-                <input formControlName="remarks" matInput placeholder="Remarks">
-            </mat-form-field><br> -->
         </div>
         <div class="column">
             <mat-form-field appearance="fill">
                 <mat-label>Deposit into Bank</mat-label>
-                <input formControlName="deposit_into_bank" matInput placeholder="Deposit into Bank">
+                <input formControlName="deposit_into_bank" matInput placeholder="Deposit into Bank" type="number">
             </mat-form-field><br>
 
             <mat-form-field appearance="fill">
                 <mat-label>Closing Amount</mat-label>
-                <input formControlName="closing_amount" matInput placeholder="Closing Amount">
+                <input formControlName="closing_amount" matInput placeholder="Closing Amount" type="number">
             </mat-form-field><br>
 
             <mat-form-field appearance="fill" class="date_box">
