--- a/src/app/admin/add-edit-expense/add-edit-expense.component.html
+++ b/src/app/admin/add-edit-expense/add-edit-expense.component.html
@@ -6,19 +6,26 @@
     <form [formGroup]="expenseForm">
         <div class="column">
             <input type="number" formControlName="Expense_id" readonly hidden>
-            <mat-form-field appearance="fill" class="text">
+
+            <!-- <mat-form-field appearance="fill" class="text">
                 <mat-label>Expense Type</mat-label>
                 <input formControlName="expense_type" matInput placeholder="Expense Type">
+            </mat-form-field> -->
+            <mat-form-field appearance="fill" class="text">
+                <mat-label>Expense Type</mat-label>
+                <mat-select formControlName="expense_emp_id_fk">
+                    <!-- <mat-option *ngFor="let roledata of roledata" [value]="roledata.role_id">{{roledata.role_name}}</mat-option> -->
+                    <mat-option *ngFor="let expence_type of expence_type" [value]="expence_type">{{expence_type}}</mat-option>
+                </mat-select>
             </mat-form-field>
-
             <mat-form-field appearance="fill" class="text">
                 <mat-label>Expense Amount</mat-label>
-                <input formControlName="expense_amount" matInput placeholder="Expense Amount">
+                <input formControlName="expense_amount" matInput placeholder="Expense Amount" type="number">
             </mat-form-field>
 
             <mat-form-field appearance="fill" class="text">
                 <mat-label> Pay To</mat-label>
-                <input formControlName="expense_pay_to" matInput placeholder="Pay To">
+                <input formControlName="expense_pay_to" matInput placeholder="Pay To" type="text">
             </mat-form-field>
 
 
@@ -26,7 +33,9 @@
         <div class="column">
             <mat-form-field appearance="fill" class="text">
                 <mat-label>Mobile Number</mat-label>
-                <input formControlName="Expense_contact" matInput placeholder="Contact">
+                <input formControlName="Expense_contact" matInput placeholder="Contact" type="number"
+                    onkeypress=" return this.value.length < 10"
+                    oninput="if(this.value.length>=10) {this.value = this.value.sclice (0,10);}">
             </mat-form-field>
             <mat-form-field appearance="fill" class="date_box">
                 <mat-label>Date</mat-label>
@@ -43,11 +52,11 @@
             </mat-form-field>
         </div>
         <div class="column_1">
-        <mat-form-field appearance="fill" class="text">
-            <mat-label>Description</mat-label>
-            <input formControlName="expense_desc" matInput placeholder="Description">
-        </mat-form-field>
-    </div>
+            <mat-form-field appearance="fill" class="text">
+                <mat-label>Description</mat-label>
+                <input formControlName="expense_desc" matInput placeholder="Description">
+            </mat-form-field>
+        </div>
         <div mat-dialog-action [align]="'end'" id="main_button">
             <button mat-raised-button color="warn" (click)="resetexpense()" class="reset_btn">Reset</button>
             <button mat-raised-button (click)="onSubmit()" class="add_btn" type="submit"
