--- a/src/app/admin/material-handover/material-handover.component.css
+++ b/src/app/admin/material-handover/material-handover.component.css
@@ -1,6 +1,7 @@
-#wrapper{
+#wrapper {
     margin-top: 63px;
 }
+
 .view_notice {
     height: 40px;
     width: 100%;
@@ -22,7 +23,8 @@
 .notice_text {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-style: italic;
-    font-size: 16px;}
+    font-size: 16px;
+}
 
 .count_search {
     height: 40px;
@@ -33,6 +35,7 @@
     box-sizing: border-box;
     color: #0d5e58;
 }
+
 .count_search .notice_text {
     font-size: 16px;
 }
@@ -46,12 +49,14 @@
     top: -5px;
     left: 0px;
 }
-#add_item{
+
+#add_item {
     position: relative;
     top: -5px;
     left: 2px;
     cursor: pointer;
 }
+
 mat-icon {
     background-color: transparent;
     border: none;
@@ -88,9 +93,11 @@ tr:hover {
     color: aliceblue;
     cursor: pointer;
 }
-.mat-row:hover > .mat-cell {
-    color:  white
-  }
+
+.mat-row:hover>.mat-cell {
+    color: white
+}
+
 ng-container {
     text-align: center;
 }
@@ -101,14 +108,46 @@ ng-container {
 }
 
 /* //////////////////////////table media q//////////////////////////// */
+@media(min-width:461px) and (max-width:1180px) {
+    .notice_text {
+        font-size: 14px;
+    }
+
+    .count_search .notice_text {
+        font-size: 14px;
+    }
+
+    table th {
+        font-size: 14px;
+    }
+
+    table td {
+        font-size: 14px;
+    }
+
+}
 
 @media (max-width:460px) {
+    #wrapper {
+        overflow-x: hidden;
+    }
+
+    .cotainer {
+        overflow-x: auto;
+    }
+
+    mat-paginator {
+        position: fixed;
+    }
+
     .notice_text {
         font-size: 13px;
     }
-    .count_search .notice_text{
+
+    .count_search .notice_text {
         font-size: 13px;
     }
+
     table th {
         font-size: 13px;
     }
@@ -134,5 +173,5 @@ ng-container {
         padding-right: 0px;
         padding-left: 10px;
     }
-    
+
 }
