--- a/src/app/admin/production/production.component.css
+++ b/src/app/admin/production/production.component.css
@@ -1,6 +1,7 @@
-#wrapper{
+#wrapper {
     margin-top: 63px;
 }
+
 .view_notice {
     height: 40px;
     width: 100%;
@@ -34,9 +35,11 @@
     box-sizing: border-box;
     color: #0d5e58;
 }
-.count_search .notice_text{
+
+.count_search .notice_text {
     font-size: 16px;
 }
+
 .search input {
     border-bottom: 1px solid #0a4547;
     outline: none;
@@ -82,9 +85,11 @@ tr:hover {
     color: aliceblue;
     cursor: pointer;
 }
-.mat-row:hover > .mat-cell {
-    color:  white
-  }
+
+.mat-row:hover>.mat-cell {
+    color: white
+}
+
 ng-container {
     text-align: center;
 }
@@ -95,14 +100,46 @@ ng-container {
 }
 
 /* //////////////////////////table media q//////////////////////////// */
+@media(min-width:461px) and (max-width:1180px) {
+    .notice_text {
+        font-size: 14px;
+    }
+
+    .count_search .notice_text {
+        font-size: 14px;
+    }
+
+    table th {
+        font-size: 14px;
+    }
+
+    table td {
+        font-size: 14px;
+    }
+
+}
 
 @media (max-width:460px) {
+    #wrapper {
+        overflow-x: hidden;
+    }
+
+    .cotainer {
+        overflow-x: auto;
+    }
+
+    mat-paginator {
+        position: fixed;
+    }
+
     .notice_text {
         font-size: 13px;
     }
-    .count_search .notice_text{
+
+    .count_search .notice_text {
         font-size: 13px;
     }
+
     table th {
         font-size: 13px;
     }
@@ -128,5 +165,5 @@ ng-container {
         padding-right: 0px;
         padding-left: 10px;
     }
-    
+
 }
