--- a/src/app/admin/party/party.component.html
+++ b/src/app/admin/party/party.component.html
@@ -34,7 +34,7 @@
 
           <ng-container matColumnDef="party_contact_person">
             <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Contact Person</th>
-            <td class="data" mat-cell *matCellDef="let row">{{row.party_address}}</td>
+            <td class="data" mat-cell *matCellDef="let row">{{row.party_contact_person}}</td>
           </ng-container>
          
           <ng-container matColumnDef="Action">
