--- a/src/app/admin/weight/weight.component.html
+++ b/src/app/admin/weight/weight.component.html
@@ -20,7 +20,7 @@
           </ng-container>
 
           <ng-container matColumnDef="weight_name">
-            <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Weight Name</th>
+            <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Weight</th>
             <td class="data" mat-cell *matCellDef="let row">{{row.weight_name}}</td>
           </ng-container>
 
