--- a/src/app/admin/add-edit-area/add-edit-area.component.html
+++ b/src/app/admin/add-edit-area/add-edit-area.component.html
@@ -13,8 +13,8 @@
             </mat-form-field><br>
 
             <mat-form-field appearance="fill">
-                <mat-label>Distance</mat-label>
-                <input formControlName="area_distance" matInput placeholder="Distance">
+                <mat-label>Distance(KM)</mat-label>
+                <input type="number" formControlName="area_distance" matInput placeholder="Distance(KM)">
             </mat-form-field><br>
 
             <mat-form-field appearance="fill">
