--- a/src/app/admin/area/area.component.html
+++ b/src/app/admin/area/area.component.html
@@ -23,7 +23,7 @@
             <td class="data" mat-cell *matCellDef="let row">{{row.area_name}}</td>
           </ng-container>
           <ng-container matColumnDef="area_distance">
-            <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Distance</th>
+            <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Distance(KM)</th>
             <td class="data" mat-cell *matCellDef="let row">{{row.area_distance}}</td>
           </ng-container>
           <ng-container matColumnDef="area_desc">
