--- a/src/app/admin/dues/dues.component.css
+++ b/src/app/admin/dues/dues.component.css
@@ -122,7 +122,8 @@ ng-container {
     }
 
     mat-paginator {
-        position: fixed;
+        position: absolute;
+        width: 100%;
     }
 
     .notice_text {
