--- a/src/app/admin/sidebar/sidebar.component.html
+++ b/src/app/admin/sidebar/sidebar.component.html
@@ -67,7 +67,7 @@
                         <span>Customer</span>
                     </button>
                     <button mat-button class="menu-button" routerLink="/area" routerLinkActive="active">
-                        <mat-icon>area_chart</mat-icon>
+                        <mat-icon>location_on</mat-icon>
                         <span>Area</span>
                     </button>
 
@@ -76,15 +76,15 @@
             </div>
         </div>
         <button mat-button class="menu-button" routerLink="/purchase" routerLinkActive="active">
-            <mat-icon>area_chart</mat-icon>
+            <mat-icon>shoping</mat-icon>
             <span>Purchase</span>
         </button>
         <button mat-button class="menu-button" routerLink="/material_handover" routerLinkActive="active">
-            <mat-icon>area_chart</mat-icon>
+            <mat-icon>gradient</mat-icon>
             <span>Material Handover</span>
         </button>
         <button mat-button class="menu-button" routerLink="/production" routerLinkActive="active">
-            <mat-icon>area_chart</mat-icon>
+            <mat-icon>business</mat-icon>
             <span>Production</span>
         </button>
         <button mat-button class="menu-button" routerLink="/area_allocate" routerLinkActive="active">
@@ -97,11 +97,11 @@
             <span>Sale</span>
         </button>
         <button mat-button class="menu-button" routerLink="/dues" routerLinkActive="active">
-            <mat-icon>area_chart</mat-icon>
+            <mat-icon>payment</mat-icon>
             <span>Dues</span>
         </button>
         <button mat-button class="menu-button" routerLink="/reciept" routerLinkActive="active">
-            <mat-icon>area_chart</mat-icon>
+            <mat-icon>receipt</mat-icon>
             <span>Reciept</span>
         </button>
         <button mat-button class="menu-button" routerLink="/account" routerLinkActive="active">
@@ -109,7 +109,7 @@
             <span>Account </span>
         </button>
         <button mat-button class="menu-button" routerLink="/expense" routerLinkActive="active">
-            <mat-icon>area_chart</mat-icon>
+            <mat-icon>monetization_on</mat-icon>
             <span>Expense</span>
         </button>
         <div>
