--- a/src/app/admin/unit/unit.component.css
+++ b/src/app/admin/unit/unit.component.css
@@ -145,7 +145,8 @@ ng-container {
     }
 
     mat-paginator {
-        position: fixed;
+        position: absolute;
+        width: 100%;
     }
 
     .notice_text {
