--- a/src/app/admin/customer/customer.component.css
+++ b/src/app/admin/customer/customer.component.css
@@ -129,7 +129,8 @@ ng-container {
     }
 
     mat-paginator {
-        position: fixed;
+        position: absolute;
+        width: 100%;
     }
 
     .notice_text {
