--- a/src/app/admin/dashboard/dashboard.component.html
+++ b/src/app/admin/dashboard/dashboard.component.html
@@ -19,7 +19,7 @@
         <div class="thumbnail">
             <mat-icon>category</mat-icon><br>
             <span style="color:	rgb(255, 255, 255) "><b>{{total_cat}}</b></span><br>
-            <span style="color: #14595c;">Gst</span>
+            <span style="color: #14595c;">GST</span>
         </div>
     </a>
 
@@ -31,62 +31,166 @@
         </div>
     </a>
 
-    <a routerLink="/category">
+    <a routerLink="/size">
         <div class="thumbnail">
             <mat-icon>category</mat-icon><br>
             <span style="color:	rgb(255, 255, 255)"><b>{{total_shop}}</b></span><br>
+            <span style="color: #14595c;">Size</span>
+        </div>
+    </a>
+
+    <a routerLink="/category">
+        <div class="thumbnail">
+            <mat-icon>category</mat-icon><br>
+            <span style="color:	rgb(255, 255, 255)"><b>{{total_spo}}</b></span><br>
             <span style="color: #14595c;">Category</span>
         </div>
     </a>
 
     <a routerLink="/item">
         <div class="thumbnail">
-            <mat-icon>group</mat-icon><br>
-            <span style="color:	rgb(255, 255, 255)"><b>{{total_spo}}</b></span><br>
+            <mat-icon> group_work </mat-icon><br>
+            <span style="color:	rgb(255, 255, 255)"><b>{{total_slider}}</b></span><br>
             <span style="color: #14595c;">Item</span>
+        </div>
+    </a>
+    <a routerLink="/product">
+        <div class="thumbnail">
+            <mat-icon>area_chart</mat-icon><br>
+            <span style="color:	rgb(255, 255, 255)"><b>{{total_offer}}</b></span><br>
+            <span style="color: #14595c;">Product</span>
+        </div>
+    </a>
+    <a routerLink="/employee">
+        <div class="thumbnail">
+            <mat-icon>people</mat-icon><br>
+            <span style="color:	rgb(255, 255, 255)"><b>{{total_noti}}</b></span><br>
+            <span style="color: #14595c;">Employee</span>
         </div>
     </a>
 
     <a routerLink="/customer">
         <div class="thumbnail">
-            <mat-icon> supervisor_account </mat-icon><br>
+            <mat-icon>supervisor_account</mat-icon><br>
             <span style="color:	rgb(255, 255, 255)"><b>{{total_slider}}</b></span><br>
             <span style="color: #14595c;">Customer</span>
         </div>
     </a>
-    <a routerLink="/purchase">
+    <a routerLink="/area">
         <div class="thumbnail">
-            <mat-icon>area_chart</mat-icon><br>
-            <span style="color:	rgb(255, 255, 255)"><b>{{total_offer}}</b></span><br>
-            <span style="color: #14595c;">Purchase</span>
+            <mat-icon>location_on</mat-icon><br>
+            <span style="color:	rgb(255, 255, 255)"><b>{{total_slider}}</b></span><br>
+            <span style="color:#14595c;">Area</span>
         </div>
-    </a>
-    <a routerLink="/sale">
-        <div class="thumbnail">
-            <mat-icon>local_grocery_store</mat-icon><br>
-            <span style="color:	rgb(255, 255, 255)"><b>{{total_noti}}</b></span><br>
-            <span style="color: #14595c;">Sale</span>
-        </div>
-    </a>
 
-    <a routerLink="/cancel_bill">
-        <div class="thumbnail">
-            <mat-icon>lock</mat-icon><br>
-            <span style="color:	rgb(255, 255, 255)"><b>{{total_slider}}</b></span><br>
-            <span style="color: #14595c;">Cancel Bill</span>
-        </div>
-    </a>
-    <a routerLink="/expense">
-        <div class="thumbnail">
-            <mat-icon>work</mat-icon><br>
-            <span style="color:	rgb(255, 255, 255)"><b>{{total_slider}}</b></span><br>
-            <span style="color:#14595c;">Expense</span>
-        </div>
+        <a routerLink="/purchase">
+            <div class="thumbnail">
+                <mat-icon>shoping</mat-icon><br>
+                <span style="color:	rgb(255, 255, 255)"><b>{{total_slider}}</b></span><br>
+                <span style="color:#14595c;">Purchase</span>
+            </div>
+        </a>
+
+        <a routerLink="/material-handover">
+            <div class="thumbnail">
+                <mat-icon>gradient</mat-icon><br>
+                <span style="color:	rgb(255, 255, 255)"><b>{{total_slider}}</b></span><br>
+                <span style="color:#14595c;">Material Handover</span>
+            </div>
+        </a>
+
+        <a routerLink="/production">
+            <div class="thumbnail">
+                <mat-icon>business</mat-icon><br>
+                <span style="color:	rgb(255, 255, 255)"><b>{{total_slider}}</b></span><br>
+                <span style="color:#14595c;">Production</span>
+            </div>
+        </a>
+
+        <a routerLink="/area-allocate">
+            <div class="thumbnail">
+                <mat-icon>location_on</mat-icon><br>
+                <span style="color:	rgb(255, 255, 255)"><b>{{total_slider}}</b></span><br>
+                <span style="color:#14595c;">Area Allocate</span>
+            </div>
+        </a>
+
+        <a routerLink="/sale">
+            <div class="thumbnail">
+                <mat-icon>local_grocery_store</mat-icon><br>
+                <span style="color:	rgb(255, 255, 255)"><b>{{total_slider}}</b></span><br>
+                <span style="color:#14595c;">Sale</span>
+            </div>
+        </a>
+
+        <a routerLink="/dues">
+            <div class="thumbnail">
+                <mat-icon>payment</mat-icon><br>
+                <span style="color:	rgb(255, 255, 255)"><b>{{total_slider}}</b></span><br>
+                <span style="color:#14595c;">Dues</span>
+            </div>
+        </a>
+
+        <a routerLink="/reciept">
+            <div class="thumbnail">
+                <mat-icon>receipt</mat-icon><br>
+                <span style="color:	rgb(255, 255, 255)"><b>{{total_slider}}</b></span><br>
+                <span style="color:#14595c;">Reciept</span>
+            </div>
+        </a>
+
+        <a routerLink="/account">
+            <div class="thumbnail">
+                <mat-icon>account_circle</mat-icon><br>
+                <span style="color:	rgb(255, 255, 255)"><b>{{total_slider}}</b></span><br>
+                <span style="color:#14595c;">Account</span>
+            </div>
+        </a>
+
+        <a routerLink="/expense">
+            <div class="thumbnail">
+                <mat-icon>monetization_on</mat-icon><br>
+                <span style="color:	rgb(255, 255, 255)"><b>{{total_slider}}</b></span><br>
+                <span style="color:#14595c;">Expense</span>
+            </div>
+        </a>
+
+        <!-- <a routerLink="/expiry">
+            <div class="thumbnail">
+                <mat-icon>help</mat-icon><br>
+                <span style="color:	rgb(255, 255, 255)"><b>{{total_slider}}</b></span><br>
+                <span style="color:#14595c;">Purchase Report</span>
+            </div>
+        </a>
+
+        <a routerLink="/expiry">
+            <div class="thumbnail">
+                <mat-icon>local_offer</mat-icon><br>
+                <span style="color:	rgb(255, 255, 255)"><b>{{total_slider}}</b></span><br>
+                <span style="color:#14595c;">Sale Report</span>
+            </div>
+        </a>
 
         <a routerLink="/expiry">
             <div class="thumbnail">
                 <mat-icon>help</mat-icon><br>
                 <span style="color:	rgb(255, 255, 255)"><b>{{total_slider}}</b></span><br>
-                <span style="color:#14595c;">Expiry</span>
+                <span style="color:#14595c;">Stock Report</span>
             </div>
         </a>
+
+        <a routerLink="/expiry">
+            <div class="thumbnail">
+                <mat-icon>cancel</mat-icon><br>
+                <span style="color:	rgb(255, 255, 255)"><b>{{total_slider}}</b></span><br>
+                <span style="color:#14595c;">Purchase Cancel</span>
+            </div>
+        </a>
+
+        <a routerLink="/expiry">
+            <div class="thumbnail">
+                <mat-icon> cancel </mat-icon><br>
+                <span style="color:	rgb(255, 255, 255)"><b>{{total_slider}}</b></span><br>
+                <span style="color:#14595c;">Sale Cancel</span>
+            </div>
+        </a> -->
