for matrial hand hover

--- a/src/app/admin/add-edit-production/add-edit-production.component.html
+++ b/src/app/admin/add-edit-production/add-edit-production.component.html
@@ -5,8 +5,11 @@
 <!-- <span>Select Employee</span> -->
 <div mat-dialog-content>
     <form [formGroup]="ProductionForm">
+        
         <div class="column">
-            <input type="number" formControlName="mh_id" readonly hidden>
+
+            <input type="number" formControlName="production_id" readonly hidden>
+            <input  formControlName="production_date"   value="{{currentDate | date:'yyyy-MM-dd'}}" hidden>
             <mat-form-field appearance="fill">
                 <mat-label>Employee</mat-label>
                 <mat-select formControlName="emp_id_fk" (valueChange)="getEmpdata($event)">
@@ -46,12 +49,12 @@
 
             <mat-form-field appearance="fill">
                 <mat-label>Quantity</mat-label>
-                <input formControlName="mh_quantity" matInput placeholder="Quantity">
+                <input formControlName="production_quantity" matInput placeholder="Quantity">
             </mat-form-field>
 
             <mat-form-field appearance="fill">
                 <mat-label>Description</mat-label>
-                <input formControlName="mh_desc" matInput placeholder="Description">
+                <input formControlName="production_desc" matInput placeholder="Description">
             </mat-form-field>
             <input formControlName="admin_id_fk" type="number" ngModel={{admin_id}} readonly hidden>
         </div>
@@ -104,3 +107,6 @@
         </form>
         <br>
     </div>
+
+     
+     
