--- a/src/app/admin/add-edit-material-handover/add-edit-material-handover.component.html
+++ b/src/app/admin/add-edit-material-handover/add-edit-material-handover.component.html
@@ -54,7 +54,7 @@
     </form>     
         <div class="cotainer">    
           <div class="count_search">
-            <span class="notice_text"> Total :{{matcount}}</span>
+            <span class="notice_text"> Total : {{matcount}}</span>
             <div class="search">
               <input matInput (keyup)="applyFilter($event)" placeholder="Search" #input>
             </div>
@@ -96,13 +96,13 @@
 
                   <ng-container matColumnDef="Action">
                     <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Action</th>
-                    <!-- <td class="data" mat-cell *matCellDef="let row"> <mat-icon (click)="editweight(row)">edit</mat-icon></td> -->
+                    <td class="data" mat-cell *matCellDef="let row"> <mat-icon>edit</mat-icon></td>
                   </ng-container>
         
                   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
                   <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
                   <tr class="mat-row" *matNoDataRow>
-                    <!-- <td class="mat-cell" colspan="4">No data show"{{input.value}}"</td> -->
+                    <td class="mat-cell" colspan="7">No data show"{{input.value}}"</td>
                   </tr>
                 </table>
                 <mat-paginator #paginatorRef [pageSizeOptions]="[5, 10, 100]"
